# rspico_sw2key

./: Cargo.toml  README.md
.cargo/: config.toml
other/: README.md
src/: hello.rs  keypush.rs  lchika.rs  main.rs  rp_key.rs  serial_text.rs
