[package]
name = "rspico_sw2key"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.10.1", features = ["rt", "critical-section-impl"] }
cortex-m-rt = "0.7.3"
embedded-time = "0.12.1"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
usbd-hid = "0.7.0"
futures = { version = "0.3.30", default-features = false }
rp-pico = "0.9.0"
panic-halt = "0.2.0"

# 1.0.0 はまだ調べてないから置き換えられてない
embedded-hal = { version = "0.2.7", features = ["unproven"] }


[[bin]]
name = "main"
path = "src/main.rs"