[package]
name = "rspico_sw2key"
version = "0.1.0"
edition = "2021"

[dependencies]
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.10.1", features = ["rt", "critical-section-impl"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-time = "0.12.1"
usb-device = "0.3.2"#
usbd-hid = "0.7.0"#
usbd-serial = "0.2.2"
futures = { version = "0.3.30", default-features = false }
rp-pico = "0.9.0"
panic-halt = "0.2.0"
heapless = "0.8.0"

panic-probe = { version = "0.3.2", features = ["print-defmt"] }

# 1.0.0 はまだ調べてないから置き換えられてない
embedded-hal = { version = "0.2.7", features = ["unproven"] }

[[bin]]
name = "main"
path = "src/main.rs"

[profile.release]
debug = 2