[package]
authors = ["Chiseno Futaba <twitter:@twin_Chisenon>"]
name = "rspico_sw2key"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
defmt = "0.3.1"
defmt-rtt = "0.4.1"

panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp-pico = "0.9.0"

usb-device = "0.3.2"
usbd-hid = "0.7.0"

# 1.0.0 はまだ調べてないから置き換えられてない
embedded-hal = "0.2.7"
embedded-time = "0.12.1"


# メインじゃ使ってない子たち
#################################
heapless = "0.8.0"

rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.10.1", features = ["rt", "critical-section-impl"] }
usbd-serial = "0.2.2"
futures = { version = "0.3.30", default-features = false }
panic-halt = "0.2.0"
ufmt = "0.2.0"

#################################

[[bin]]
name = "lchika"
path = "src/lchika.rs"

[[bin]]
name = "serial_text"
path = "src/serial_text.rs"

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "rp_key"
path = "src/rp_key.rs"


[profile.release]
debug = 2